--- a/01/Makefile
+++ b/01/Makefile
@@ -1,8 +1,11 @@
 all:
 	javac HttpServer.java
 
-run: all
-	java HttpServer
+run: jar
+	java -jar webserver.jar 8080
 
 clean:
 	rm *.class
+
+jar: all
+	jar cfm webserver.jar Manifest.txt *.class 404.html
