--- a/02/Makefile
+++ b/02/Makefile
@@ -1,5 +1,5 @@
 all:
-	javac -cp lib/jsoup-1.7.2.jar:lib/lucene-core-4.5.1.jar *.java
+	javac -cp lib/jsoup-1.7.2.jar:lib/lucene-core-4.5.1.jar:lib/lucene-analyzers-common-4.5.1.jar *.java
 
 run: jar
 	java -jar crawler.jar http://www.udacity.com/cs101x/index.html
@@ -8,7 +8,7 @@ clean:
 	rm *.class
 
 jar: all
-	jar cvfm crawler.jar Manifest.txt *.class lib/jsoup-1.7.2.jar lib/lucene-core-4.5.1.jar
+	jar cvfm crawler.jar Manifest.txt *.class
 
 pdf:
 	pandoc README.md -o README.pdf
